fix error contrast

--- a/style.css
+++ b/style.css
@@ -776,7 +776,7 @@ h4 {
 }
 
 .tc-white {
-    color: #ffffff!important;
+    color: #000000!important;
 }
 
 .btn-atomic-tangerine {
